# Infotainment-System

./: .gitignore  CMakeLists.txt  Main.qml  assets.qrc  main.cpp
controllers/: system.cpp  system.h
ui/bottomBar/: BottomBar.qml
ui/leftScreen/: LeftScreen.qml
ui/rightScreen/: NavigationSearchBox.qml  RightScreen.qml
